# hft-orderbook-engine_2

./: .gitignore  README.md  updated_orderbook_2.sln
updated_orderbook_2/: Build.txt  CMakeLists.txt  HFTAlgorithms.cpp  HFTAlgorithms.hpp  HFTUtils.cpp  HFTUtils.hpp  MachingEngine.cpp  MatchingEngine.cpp  MatchingEngine.hpp  OrderBook.cpp  OrderBook.hpp  Tests.cpp  idea_algo.txt  main.cpp  updated_orderbook_2.vcxproj  updated_orderbook_2.vcxproj.filters
